--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Haunted houses -- Connecticut -- Fiction'
+- GITenberg
 title: The Thing from the Lake
 url: http://www.gutenberg.org/ebooks/23738
